overflow fixed

--- a/responsive.css
+++ b/responsive.css
@@ -374,9 +374,7 @@
 }
 
 @media  (max-width: 575px) {
-  html{
-    overflow-x: hidden;
-  } 
+ 
   .container-style {
     margin-top: 0;
   }
